k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: shoes
  labels:
    app: frontend
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"
    prometheus.io/path: "/"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      annotations:
        prometheus.io/scrape: "false"
        prometheus.io/port: "80"
        prometheus.io/path: "/"
    spec:
      imagePullSecrets:
      - name: dockerhub-creds
      containers:
      - name: frontend
        image: akhilsabbisetty/shoe-app:frontend-3
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
