k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-svc
  namespace: shoes
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgresql
  clusterIP: None
