k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shoes-app-ingress
  namespace: shoes
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: shoes.akhilsabbisetty.site
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
